--- a/main.css
+++ b/main.css
@@ -19,19 +19,64 @@ html, body {
     opacity: 0;
   }
 }
+@keyframes textSlide{
+  0% {
+    opacity: 0;
+    top: 75%;
+    left: 15%; 
+  }
+  25% {
+    opacity: 1;
+    top: 65%;
+    left: 15%;
+  }
+  75%{
+    opacity: 1;
+    top: 65%;
+    left: 15%;  
+  }
+  100% {
+    opacity: 0;
+    top: 75%;
+    left: 15%; 
+  }
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-h1 {
-  all: unset;
-}
 
-h1 {
+.title {
+  all: unset;
   font-size: 64px;
   font-weight: 700;
   color: white;
+  opacity: 0;
+}
+
+.subtitle{
+  all: unset;
+  font-size: 32px;
+  font-weight: 450;
+  color: white;
+  opacity: 0;
+  margin-top: 5%;
+  display: block;
+}
+
+.text{
+  position: absolute;
+  z-index: 2;
+  top: 65%;
+  left: 15%;
+}
+
+.arrow{
+  all: unset;
+  transform: rotate(-90deg);
+  font-weight: 200!important;
+  margin-left: -1em;
 }
 
 .slide {
@@ -74,7 +119,18 @@ h1 {
 }
 
 .showing :first-child{
-  animation: fadeEffect 5.5s;
+  animation: textSlide 7.5s;
+  transition: all 1s ease-in-out;
+}
+
+.showing :first-child .subtitle{
+  animation: textSlide 5.5s;
+  transition: all 1s ease-in-out;
+  transition-delay: 2s;
+}
+
+.showing :nth-child(2){
+  animation: fadeEffect 7.5s;
   transition: all 1s ease-in-out;
   transition-delay: 4.5s;
 }
