--- a/main.css
+++ b/main.css
@@ -22,22 +22,22 @@ html, body {
 @keyframes textSlide{
   0% {
     opacity: 0;
-    top: 75%;
+    top: 75vh;
     left: 15%; 
   }
   25% {
     opacity: 1;
-    top: 65%;
+    top: 65vh;
     left: 15%;
   }
   75%{
     opacity: 1;
-    top: 65%;
+    top: 65vh;
     left: 15%;  
   }
   100% {
     opacity: 0;
-    top: 75%;
+    top: 75vh;
     left: 15%; 
   }
 }
@@ -51,9 +51,30 @@ body {
   make necessary changes to avoid clutter. 
 */
 
+.dot {
+  height: 10px;
+  width: 10px;
+  background-color: #bbb;
+  border-radius: 50%;
+  margin: 15px;
+  display: inline-block;
+}
+
+.active{
+  background-color: white!important;
+}
+
+.controls{
+  top: 90vh;
+  right: 10%;
+  width: auto;
+  position: absolute;
+  z-index: 3;
+}
+
 .title {
   all: unset;
-  font-size: 64px;
+  font-size: 4vw;
   font-weight: 700;
   color: white;
   opacity: 0;
@@ -61,7 +82,7 @@ body {
 
 .subtitle{
   all: unset;
-  font-size: 32px;
+  font-size: 1.5vw;
   font-weight: 450;
   color: white;
   opacity: 0;
@@ -72,15 +93,14 @@ body {
 .text{
   position: absolute;
   z-index: 2;
-  top: 65%;
   left: 15%;
 }
 
-.arrow{
-  all: unset;
-  transform: rotate(-90deg);
-  font-weight: 200!important;
-  margin-left: -1em;
+.fancyArrow{
+  border: 2px solid white;
+  border-radius: 100%;
+  padding: 5px;
+  align-items: center;
 }
 
 .slide {
