--- a/main.css
+++ b/main.css
@@ -54,14 +54,18 @@ body {
 .dot {
   height: 10px;
   width: 10px;
-  background-color: #bbb;
+  background-color: rgb(139, 139, 139);
   border-radius: 50%;
   margin: 15px;
   display: inline-block;
+  transition: all 1s ease-in-out;
 }
 
 .active{
-  background-color: white!important;
+  background-color: white;
+  height: 11px;
+  width: 11px;
+  transition: all 1s ease-in-out;
 }
 
 .controls{
